# cwcom

./: .gitignore  README.md  buildout.cfg  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  secrets.production.yml.encrypted  serverless.yml
.github/: dependabot.yml
.github/workflows/: deploy-prod.yml  deploy-staging.yml  pr.yml
base/: admin.py  apps.py  models.py  storages.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_auto_20161029_2204.py  0003_auto_20161029_2245.py  0004_text_pdf.py  0005_auto_20161101_1626.py  0006_auto_20161101_1628.py  0007_auto_20170920_1313.py  0008_portfolio_portfolioimage.py  0009_auto_20180107_1701.py  0010_auto_20180107_1705.py  0011_auto_20180110_1107.py  0012_auto_20180110_1541.py  0013_auto_20180110_1705.py  0014_auto_20180110_1715.py  0015_auto_20180110_1721.py  0016_auto_20180110_1726.py  0017_auto_20180111_1441.py  0018_auto_20180111_1454.py  0019_auto_20190203_1655.py  0020_alter_talk_talks.py  0021_alter_text_pdf.py
base/static/base/css/: style.css  style.sass
base/static/base/js/: site.js
base/static/base/js/min/: site-min.js
base/templates/: base.html  content-blocks.html  events.html  index.html  intro.html  navigation.html  past.html  portfolio-carousel.html  portfolio.html  project-detail.html  projects.html  system-detail.html  systems.html  talks.html  teaching.html  texts.html
base/templatetags/: image_tags.py
portfolio/: base.py  dev.py  dev_aws.py  production.py  settings.py  staging.py  urls.py  wsgi.py
